--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "typescript": "^5"
   },
   "scripts": {
-    "build:windows": "CGO_ENABLED=1 go build -buildmode=c-shared -o dist/lib/libprompt.so src/main.go",
+    "build:linux": "CGO_ENABLED=1 go build -buildmode=c-shared -o dist/lib/linux/libprompt.so src/main.go",
+    "build:windows": "CGO_ENABLED=1 go build -buildmode=c-shared -o dist/lib/windows/libprompt.dll src/main.go",
+    "build:macos": "CGO_ENABLED=1 go build -buildmode=c-shared -o dist/lib/macos/libprompt.dylib src/main.go",
+    "build": "bun run build:linux && bun run build:windows && bun run build:macos",
     "start": "bun index.ts"
   }
 }
