--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "go-promptui-bun",
-  "module": "index.ts",
+  "version": "0.1.0",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
